# qrforge-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/qrforge_mcp/: __init__.py  __main__.py  client.py  server.py
tests/: test_client.py  test_tools.py
