[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrforge-mcp"
version = "0.1.0"
description = "MCP server for the QR Forge API — create and manage trackable QR codes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Georgi Kolarov" }]
keywords = ["mcp", "qr", "qrcode", "qrforge", "model-context-protocol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
qrforge-mcp = "qrforge_mcp.__main__:main"

[project.urls]
Homepage = "https://qrforge.work"
Repository = "https://github.com/jkolarov/qrforge-mcp"
Issues = "https://github.com/jkolarov/qrforge-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qrforge_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
